methods.basics.MethodsDogHouse.scala.error
Erreur de compilation :
MethodsDogHouse:1: error: not found: value dogHouse
dogHouse() {
^MethodsDogHouse:20: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:26: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:36: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:46: error: not found: value dogHouse
		dogHouse();		
                ^